web front-end: delete, update, show, list users, plus tests

--- a/CuriopediaWebClient/src/app/app.component.html
+++ b/CuriopediaWebClient/src/app/app.component.html
@@ -5,7 +5,7 @@
   <router-outlet></router-outlet>
   <footer [mptStyles]="[styles.footer]">
     <small>
-      Curiopedia Web Client by Jakub Radlak
+      Curipedia Web Client
     </small>
   </footer>
 </div>
