--- a/CuriopediaWebClient/src/app/pages/top/top.component.html
+++ b/CuriopediaWebClient/src/app/pages/top/top.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1 class="display-3" [mptStyles]="[styles.header]">Welcome to the Curiopedia Web Client</h1>
 
-  <p class="lead">This is the home page for Curiopedia Web Client</p>
+  <p class="lead">This is the home page for Curiopedia Web Client application.</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" [routerLink]="['/signup']"
        role="button">Sign up now!</a>
