category controller front-end test

--- a/CuriopediaWebClient/src/app/pages/category-list/category-list.component.html
+++ b/CuriopediaWebClient/src/app/pages/category-list/category-list.component.html
@@ -2,7 +2,7 @@
 
 <ul class="categories list-unstyled">
   <li *ngFor="let c of categories" class="clearfix" [mptStyles]="[styles.list]">    
-    <a [routerLink]="['/categories', c.id]">{{c.name}}</a>
+    <a [routerLink]="['/categories', c.name]">{{c.name}}</a>
   </li>
 </ul>
 
