--- a/CuriopediaWebClient/src/app/pages/category-edit/category-edit.component.html
+++ b/CuriopediaWebClient/src/app/pages/category-edit/category-edit.component.html
@@ -1,9 +1,8 @@
 <h1>Edit category</h1>
 
-<form [formGroup]="myForm" (submit)="onSubmit(myForm.value)" novalidate>
+<form [formGroup]="categoryForm" (submit)="onSubmit(categoryForm.value)" novalidate>
 
-  <div class="form-group"
-       [class.has-danger]="!name.valid && name.touched">
+  <div class="form-group" [class.has-danger]="!name.valid && name.touched">
     <label class="col-form-label" for="nameInput">Name</label>
     <input
       type="text"
@@ -20,8 +19,7 @@
     </div>
   </div>
 
-  <div class="form-group"
-       [class.has-danger]="!description.valid && description.touched">
+  <div class="form-group" [class.has-danger]="!description.valid && description.touched">
     <label class="col-form-label" for="descriptionInput">description</label>
     <input
       type="description"
