adding and displaying categories

--- a/CuriopediaWebClient/src/app/pages/category-list/category-list.component.html
+++ b/CuriopediaWebClient/src/app/pages/category-list/category-list.component.html
@@ -12,3 +12,7 @@
              [totalPages]="totalPages"
              [currentPage]="page"></mpt-pager>
 </div>
+
+<button type="button" class="btn btn-warning" (click)="onAdd()">
+  Add+
+</button>
