--- a/CuriopediaWebClient/src/app/pages/category-edit/category-edit.component.html
+++ b/CuriopediaWebClient/src/app/pages/category-edit/category-edit.component.html
@@ -36,6 +36,6 @@
     </div>
   </div>
 
-  <button type="submit" class="btn btn-lg btn-primary">Submit</button>
+  <button type="submit" class="btn btn-lg btn-primary">Save</button>
 
 </form>
